# D-optimal-design

./: ReadMe.md  data.py  gms.tar.xz  gmsconvert.sh  jumpsolve.jl  logparser.py  logs.tar.xz  runtest.sh
benchmark/: block2_45_10_9_10.design  block2_45_10_9_11.design  block2_45_10_9_12.design  block2_45_10_9_13.design  block2_45_10_9_9.design  block2_55_11_10_10.design  block2_55_11_10_11.design  block2_55_11_10_12.design  block2_55_11_10_13.design  block2_55_11_10_14.design  block2_66_12_11_11.design  block2_66_12_11_12.design  block2_66_12_11_13.design  block2_66_12_11_14.design  block2_66_12_11_15.design  normal_50_20_20.design  normal_50_20_21.design  normal_50_20_22.design  normal_50_20_23.design  normal_50_20_24.design  normal_50_30_30.design  normal_50_30_31.design  normal_50_30_32.design  normal_50_30_33.design  normal_50_30_34.design  normal_60_24_24.design  normal_60_24_25.design  normal_60_24_26.design  normal_60_24_27.design  normal_60_24_28.design  normal_60_36_36.design  normal_60_36_37.design  normal_60_36_38.design  normal_60_36_39.design  normal_60_36_40.design  normal_70_28_28.design  normal_70_28_29.design  normal_70_28_30.design  normal_70_28_31.design  normal_70_28_32.design  (+5 more)
gms/: block2_45_10_9_10.design.gms  block2_45_10_9_11.design.gms  block2_45_10_9_12.design.gms  block2_45_10_9_13.design.gms  block2_45_10_9_9.design.gms  block2_55_11_10_10.design.gms  block2_55_11_10_11.design.gms  block2_55_11_10_12.design.gms  normal_50_20_20.design.gms  (+36 more)
solver/: CMakeLists.txt
solver/src/: main.cpp  probdata.cpp  probdata.h  reader_sub.cpp  reader_sub.h
(+6 files in other folders)
